# exifyay

./: .gitignore  CMakeCache.txt  CMakeLists.txt  MANIFEST.in  Makefile  README.md  bindings.py  bindings.py.cmake  cmake_install.cmake  setup.py  setup.py.cmake
JpegEncoderEXIF/: CMakeLists.txt  JpegEncoderEXIF.c  JpegEncoderEXIF.h  Makefile  cmake_install.cmake
bindings/: .gitignore  CMakeLists.txt  Makefile  __init__.py  cexif.pxd  cmake_install.cmake  exifyay.pyx  test.py
cmake/: FindCython.cmake
libexif/: CMakeLists.txt  Makefile  cmake_install.cmake  config.h.cmake  exif-data.c  exif-data.h  exif-entry.c  exif-entry.h  exif-loader.c  exif-tag.c  i18n.h
libexif/canon/: mnote-canon-entry.c
libexif/pentax/: exif-mnote-data-pentax.c
libjpeg/: CMakeLists.txt  Makefile  cmake_install.cmake
